# ANAFI-Thermal-Mission-Suite

./: 00_PRIMERO_construir_ros2.bash  01_iniciar_mission_manager.bash  02_iniciar_gui.bash  03_iniciar_todo.bash  README.md  install_all_dependencies.sh  requirements.txt
app/: config.py  main.py
app/drone_features/: camera_control.py  gimbal_control.py
app/interfaz/: app_shell.py  plot3d.py  ros2_controller.py  ros2_mission_client.py  util.py
app/interfaz/pages/: autonomy_page.py  camera_controls_fragment.py  errors_page.py  flight_mission_page.py  gallery_page.py  gallery_thermal_page.py  ros2_bridge_page.py  sensores_page.py  stream_page.py
app/movimiento/: auto.py
app/ros2_bridge/: __init__.py  run_bridge.py  telemetry_bridge.py
app/sensores/: __init__.py  camera.py  drone_client.py  errors_pipeline.py  media_utils.py  messages.py  navigation.py  photo_metadata.py  rgb_capture.py  rstp_streaming.py  streams.py  thermal_capture.py  thermal_flir.py  thermal_map.py  thermal_matrix.py
app/tools/: README.md  run_ros2_gui_with_report.sh
ros2_ws/src/anafi_mission_manager/: package.xml  setup.cfg  setup.py
ros2_ws/src/anafi_mission_manager/anafi_mission_manager/: mission_manager_node.py
ros2_ws/src/anafi_mission_manager/launch/: mission_manager.launch.py
ros2_ws/src/anafi_suite_core/: package.xml  setup.cfg  setup.py
ros2_ws/src/anafi_suite_core/anafi_suite_core/: __init__.py  mission_executor.py  runtime_paths.py
runtime/: current_mission.json
scripts/: _common.sh  build_ros2.sh  start_all.sh  start_gui.sh  start_mission_manager.sh
(+8 files in other folders)
