<?xml version="1.0"?>
<package format="3">
  <name>anafi_mission_manager</name>
  <version>0.1.0</version>
  <description>ROS2 mission manager for the unified ANAFI suite.</description>
  <maintainer email="openai@example.com">OpenAI</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>anafi_suite_core</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
