<?xml version="1.0"?>
<package format="3">
  <name>anafi_suite_core</name>
  <version>0.1.0</version>
  <description>Core mission runtime shared by the GUI and ROS2 mission manager.</description>
  <maintainer email="openai@example.com">OpenAI</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
